--- a/index.html
+++ b/index.html
@@ -10,40 +10,40 @@
   <header class="container header">
     <h1>Bitcoin news</h1>
     <ul class="navbar">
-      <li><h2>Home</h2></li>
-      <li><h2>Exchange</h2></li>
-      <li><h2>Tweets</h2></li>
-      <li><h2>About</h2></li>
+      <li><h2><a href="index.html">Home</a></h2></li>
+      <li><h2><a href="blog.html">Exchange</a></h2></li>
+      <li><h2><a href="tweets.html">Tweets</a></h2></li>
+      <li><h2><a href="about.html">About</a></h2></li>
     </ul>
   </header>
   <main class="container">
     <article>
       <h3>BTC rise 19.000 USD in december 2017</h3>
-      <img src="https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy82M2NmN2Y2ZTA2ODZkMGU0N2EzMGIyNjQ5MTNkYTZiYi5qcGc=.jpg" alt="">
+      <a href="blog1.html"><img src="https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy82M2NmN2Y2ZTA2ODZkMGU0N2EzMGIyNjQ5MTNkYTZiYi5qcGc=.jpg" alt=""></a>
       <br>
-      <p>In 15 December 2017, Bitcoin price reach 17900 USD. Few day later rise down a thrid of value dropping below 14000 USD...</p> <button>See more</button>
+      <p>In 15 December 2017, Bitcoin price reach 17900 USD. Few day later rise down a thrid of value dropping below 14000 USD. Now everyboy was fear about the future. And yes, it keept going down Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, doloremque, tempora vero molestiae temporibus beatae, voluptatem facilis, fugit similique consequuntur ex. Ducimus tempore provident distinctio ea aut omnis sapiente voluptatum...</p> <button><a href="blog1.html">See more</a></button>
       <br>
       <h3>Crypto currencies. How digital coins works?</h3>
-      <img src="https://images.cointelegraph.com/images/740_Ly9jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy8wNmY3YTk1MDNiOWZiODg1ZGNlMjQ5ZDU3ZjA4OWIwMy5qcGc=.jpg" alt="">
+      <a href="blog2.html"><img src="https://images.cointelegraph.com/images/740_Ly9jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy8wNmY3YTk1MDNiOWZiODg1ZGNlMjQ5ZDU3ZjA4OWIwMy5qcGc=.jpg" alt=""></a>
       <br>
-      <p>Bitcoin, Ethereum, Litecoin, Dash ... They all work from the Blockchain. But what is the blockchain and why is this system so innovative?...</p> <button>See more</button>
+      <p>Bitcoin, Ethereum, Litecoin, Dash ... They all work from the Blockchain. But what is the blockchain and why is this system so innovative? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, doloremque, tempora vero molestiae temporibus beatae, voluptatem facilis, fugit similique consequuntur ex. Ducimus tempore provident distinctio ea aut omnis sapiente voluptatum...</p> <button><a href="blog2.html">See more</a></button>
       <br>
       <h3>All about the best Bitcoin wallets</h3>
-      <img src="https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy9hYTBiM2M3ZmRhYmZkODNhZjAzNmY3YzEyYTA5Zjk2OC5qcGc=.jpg" alt="">
+      <a href="blog3.html"><img src="https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy9hYTBiM2M3ZmRhYmZkODNhZjAzNmY3YzEyYTA5Zjk2OC5qcGc=.jpg" alt=""></a>
       <br>
-      <p>With the recent trend that encompasses everything about crypto markets and bitcoin, software developers are increasingly creating virtual wallets, each with particular features ...</p> <button>See more</button>
+      <p>With the recent trend that encompasses everything about crypto markets and bitcoin, software developers are increasingly creating virtual wallets, each with particular features. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, doloremque, tempora vero molestiae temporibus beatae, voluptatem facilis, fugit similique consequuntur ex. Ducimus tempore provident distinctio ea aut omnis sapiente voluptatum...</p> <button><a href="blog3.html">See more</a></button>
       <br>
       <h3>Buy and sell evrything you want, anonymously</h3>
-      <img src="https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy85OGI4NTA3ZWRlMWU0YTU5ZDc2ZTdiN2NkOTYzMWVlMy5qcGc=.jpg" alt="">
+      <a href="blog4.html"><img src="https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy85OGI4NTA3ZWRlMWU0YTU5ZDc2ZTdiN2NkOTYzMWVlMy5qcGc=.jpg" alt=""></a>
       <br>
-      <p>The blockchain network on which bitcoin works is so democratic that the level of anonymity of each transaction is very high. This allows from the comfort of the cell phone ...</p> <button>See more</button>
+      <p>The blockchain network on which bitcoin works is so democratic that the level of anonymity of each transaction is very high. This allows from the comfort of the cell phone. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, doloremque, tempora vero molestiae temporibus beatae, voluptatem facilis, fugit similique consequuntur ex. Ducimus tempore provident distinctio ea aut omnis sapiente voluptatum...</p> <button><a href="blog1.html">See more</a></button>
     </article>
     <aside>
       <p>Lorem ipsum dolor sit amet, consectetur adipi sit amet, consectetur adipi sit amet, consectetur adipi</p>
     </aside>
   </main>
   <footer>
-    <h3>Made by <a href="https://twitter.com/davidgonzalezFx" target="_blank">David Gonzalez</a> for <a href="https://www.holbertonschool.com" target="_blank">Holberton School</a>.</h3>
+    <p>Made by <a href="https://twitter.com/davidgonzalezFx" target="_blank">David Gonzalez</a> for <a href="https://www.holbertonschool.com" target="_blank">Holberton School</a>.</p>
     <br>
   </footer>
 </body>
