add navigation, blogposts, exchange and about pages. Clickeable images

--- a/exchange.html
+++ b/exchange.html
@@ -19,18 +19,18 @@
   </header>
   <main class="container">
     <article>
-      <h2>David Gonzalez</h2>
-      <img src="https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy81NDc0ZWM2YmZjMWExMmYzZGZkMmQyYTVmNzc5MGJiMC5qcGc=.jpg" alt="">
+      <h2>Exhange some crypto</h2>
+      <img src="https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy80ZDIwYzc5YzIxNzZjZTk2YzA2N2E4MjZlYzQ0ZmQ2Yi53ZWJw.webp" alt="">
       <br>
       <br>
-      <h4>Instagram:</h4>
-      <a href="https://www.instagram.com/davidgonzalezfx"><p>instagram.com/davidgonzalezfx</p></a>
-      <p>Bogota, Colombia</p>
-      <p>20 years old</p>
-      <p>I am a young entrepreneur who loves tech. I’m learning code with fullstack javascript. I’m always learning new things also I am super organized and goal oriented. I’m interested about BTC and blockhain, finances, IoT, digital marketing and hacking.</p>
+      <p>BTC SELL:  10000 USD</p>
+      <p>BTC BUY: &nbsp;10 USD</p>
       <br>
+      <h4>My Wallet:</h4>
+      <a href="https://www.blockchain.com/"><p>XXXXXQmavnUfCW11DAApiJxp7ARn2XXXXX</p></a>
       <br>
-      <button><a href="blog1.html">Last blog post</a></button>
+      <h4>Contact me</h4>
+      <a href="https://yriry2.holbertonschool.com/u/dgonzalez1/"><p>Holberton School Forum</p></a>
     </article>
     <aside>
       <p>Lorem ipsum dolor sit amet, consectetur adipi sit amet, consectetur adipi sit amet, consectetur adipi</p>
