--- a/blog1.html
+++ b/blog1.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bitcoin news</title>
   <link href="https://www.holbertonschool.com/level2/holberton.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="works_on_smartphone" >
   <header class="container header">
     <h1>Bitcoin news</h1>
     <ul class="navbar">
       <li><h2><a href="index.html">Home</a></h2></li>
-      <li><h2><a href="blog.html">Exchange</a></h2></li>
+      <li><h2><a href="exchange.html">Exchange</a></h2></li>
       <li><h2><a href="tweets.html">Tweets</a></h2></li>
       <li><h2><a href="about.html">About</a></h2></li>
     </ul>
