some problems were fixed. Now i'm trying to do responsive this web

--- a/exchange.html
+++ b/exchange.html
@@ -1,44 +1,45 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bitcoin news</title>
-  <link href="https://www.holbertonschool.com/level2/holberton.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body class="works_on_smartphone" >
-  <header class="container header">
-    <h1>Bitcoin news</h1>
-    <ul class="navbar">
-      <li><h2><a href="index.html">Home</a></h2></li>
-      <li><h2><a href="exchange.html">Exchange</a></h2></li>
-      <li><h2><a href="tweets.html">Tweets</a></h2></li>
-      <li><h2><a href="about.html">About</a></h2></li>
-    </ul>
-  </header>
-  <main class="container">
-    <article>
-      <h2>Exhange some crypto</h2>
-      <img src="https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy80ZDIwYzc5YzIxNzZjZTk2YzA2N2E4MjZlYzQ0ZmQ2Yi53ZWJw.webp" alt="">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bitcoin news</title>
+    <link href="https://www.holbertonschool.com/level2/holberton.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body class="works_on_smartphone" >
+    <header class="container header">
+      <h1>Bitcoin news</h1>
+      <ul class="navbar">
+        <li><h2><a href="index.html">Home</a></h2></li>
+        <li><h2><a href="exchange.html">Exchange</a></h2></li>
+        <li><h2><a href="tweets.html">Tweets</a></h2></li>
+        <li><h2><a href="about.html">About</a></h2></li>
+      </ul>
+    </header>
+    <main class="container">
+      <article>
+        <h2>Exhange some crypto</h2>
+        <img src="https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy80ZDIwYzc5YzIxNzZjZTk2YzA2N2E4MjZlYzQ0ZmQ2Yi53ZWJw.webp" alt="">
+        <br>
+        <br>
+        <p>BTC SELL:  10000 USD</p>
+        <p>BTC BUY: &nbsp;10 USD</p>
+        <br>
+        <h4>My Wallet:</h4>
+        <a href="https://www.blockchain.com/" target="_blank"><p>XXXXXQmavnUfCW11DAApiJxp7ARn2XXXXX</p></a>
+        <br>
+        <h4>Contact me</h4>
+        <a href="https://yriry2.holbertonschool.com/u/dgonzalez1/" target="_blank"><p>Holberton School Forum</p></a>
+      </article>
+      <aside>
+        <p>Lorem ipsum dolor sit amet, consectetur adipi sit amet, consectetur adipi sit amet, consectetur adipi</p>
+      </aside>
+    </main>
+    <footer>
+      <p>Made by <a href="https://twitter.com/davidgonzalezFx" target="_blank">David Gonzalez</a> for <a href="https://www.holbertonschool.com" target="_blank">Holberton School</a>.</p>
       <br>
-      <br>
-      <p>BTC SELL:  10000 USD</p>
-      <p>BTC BUY: &nbsp;10 USD</p>
-      <br>
-      <h4>My Wallet:</h4>
-      <a href="https://www.blockchain.com/"><p>XXXXXQmavnUfCW11DAApiJxp7ARn2XXXXX</p></a>
-      <br>
-      <h4>Contact me</h4>
-      <a href="https://yriry2.holbertonschool.com/u/dgonzalez1/"><p>Holberton School Forum</p></a>
-    </article>
-    <aside>
-      <p>Lorem ipsum dolor sit amet, consectetur adipi sit amet, consectetur adipi sit amet, consectetur adipi</p>
-    </aside>
-  </main>
-  <footer>
-    <p>Made by <a href="https://twitter.com/davidgonzalezFx" target="_blank">David Gonzalez</a> for <a href="https://www.holbertonschool.com" target="_blank">Holberton School</a>.</p>
-    <br>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
