--- a/about.html
+++ b/about.html
@@ -1,30 +1,31 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bitcoin news</title>
-  <link href="https://www.holbertonschool.com/level2/holberton.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body class="works_on_smartphone" >
-  <header class="container header">
-    <h1>Bitcoin news</h1>
-    <ul class="navbar">
-      <li><h2><a href="index.html">Home</a></h2></li>
-      <li><h2><a href="exchange.html">Exchange</a></h2></li>
-      <li><h2><a href="tweets.html">Tweets</a></h2></li>
-      <li><h2><a href="about.html">About</a></h2></li>
-    </ul>
-  </header>
-  <main class="container">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bitcoin news</title>
+    <link href="https://www.holbertonschool.com/level2/holberton.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body class="works_on_smartphone" >
+    <header class="container header">
+      <h1>Bitcoin news</h1>
+      <ul class="navbar">
+  <li><h2><a href="index.html">Home</a></h2></li>
+  <li><h2><a href="exchange.html">Exchange</a></h2></li>
+  <li><h2><a href="tweets.html">Tweets</a></h2></li>
+  <li><h2><a href="about.html">About</a></h2></li>
+      </ul>
+    </header>
+    <main class="container">
     <article>
       <h2>David Gonzalez</h2>
       <img src="https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy81NDc0ZWM2YmZjMWExMmYzZGZkMmQyYTVmNzc5MGJiMC5qcGc=.jpg" alt="">
       <br>
       <br>
       <h4>Instagram:</h4>
-      <a href="https://www.instagram.com/davidgonzalezfx"><p>instagram.com/davidgonzalezfx</p></a>
+      <a href="https://www.instagram.com/davidgonzalezfx" target="_blank"><p>instagram.com/davidgonzalezfx</p></a>
       <p>Bogota, Colombia</p>
       <p>20 years old</p>
       <p>I am a young entrepreneur who loves tech. I’m learning code with fullstack javascript. I’m always learning new things also I am super organized and goal oriented. I’m interested about BTC and blockhain, finances, IoT, digital marketing and hacking.</p>
@@ -35,10 +36,10 @@
     <aside>
       <p>Lorem ipsum dolor sit amet, consectetur adipi sit amet, consectetur adipi sit amet, consectetur adipi</p>
     </aside>
-  </main>
-  <footer>
-    <p>Made by <a href="https://twitter.com/davidgonzalezFx" target="_blank">David Gonzalez</a> for <a href="https://www.holbertonschool.com" target="_blank">Holberton School</a>.</p>
-    <br>
-  </footer>
-</body>
+    </main>
+    <footer>
+      <p>Made by <a href="https://twitter.com/davidgonzalezFx" target="_blank">David Gonzalez</a> for <a href="https://www.holbertonschool.com" target="_blank">Holberton School</a>.</p>
+      <br>
+    </footer>
+  </body>
 </html>
