--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bitcoin news</title>
-  <link href="https://www.holbertonschool.com/level2/holberton.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <header class="container header">
-    <h1>Bitcoin news</h1>
-    <ul class="navbar">
-      <li><h2><a href="index.html">Home</a></h2></li>
-      <li><h2><a href="exchange.html">Exchange</a></h2></li>
-      <li><h2><a href="tweets.html">Tweets</a></h2></li>
-      <li><h2><a href="about.html">About</a></h2></li>
-    </ul>
-  </header>
-  <main class="container">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bitcoin news</title>
+    <link href="https://www.holbertonschool.com/level2/holberton.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+  </head>
+  <body class="works_on_smartphone">
+    <header class="container header">
+      <h1>Bitcoin news</h1>
+        <ul class="navbar">
+          <li><h2><a href="index.html" class="menu">Home</a></h2></li>
+          <li><h2><a href="exchange.html"class="menu">Exchange</a></h2></li>
+          <li><h2><a href="tweets.html" class="menu">Tweets</a></h2></li>
+          <li><h2><a href="about.html" class="menu">About</a></h2></li>
+        </ul>
+    </header>
+    <main class="container">
     <article>
       <h3>BTC rise 19.000 USD in december 2017</h3>
       <a href="blog1.html"><img src="https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy82M2NmN2Y2ZTA2ODZkMGU0N2EzMGIyNjQ5MTNkYTZiYi5qcGc=.jpg" alt=""></a>
@@ -42,10 +43,10 @@
     <aside>
       <p>Lorem ipsum dolor sit amet, consectetur adipi sit amet, consectetur adipi sit amet, consectetur adipi</p>
     </aside>
-  </main>
-  <footer>
-    <p>Made by <a href="https://twitter.com/davidgonzalezFx" target="_blank">David Gonzalez</a> for <a href="https://www.holbertonschool.com" target="_blank">Holberton School</a>.</p>
-    <br>
-  </footer>
-</body>
+    </main>
+    <footer>
+      <h3>Made by <a href="https://twitter.com/davidgonzalezFx" target="_blank">David Gonzalez</a> for <a href="https://www.holbertonschool.com" target="_blank">Holberton School</a>.</h3>
+      <br>
+    </footer>
+  </body>
 </html>
