Fixed w3 validator errors

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
       <p>I am a young entrepreneur who loves tech. I’m learning code with fullstack javascript. I’m always learning new things also I am super organized and goal oriented. I’m interested about BTC and blockhain, finances, IoT, digital marketing and hacking.</p>
       <br>
       <br>
-      <button><a href="blog1.html">Last blog post</a></button>
+      <a href="blog1.html" class="more">Last blog post</a>
     </article>
     <aside>
       <p>Lorem ipsum dolor sit amet, consectetur adipi sit amet, consectetur adipi sit amet, consectetur adipi</p>
