icon added, exchange page responsive, rm class menu, fix blog4 link and title

--- a/exchange.html
+++ b/exchange.html
@@ -20,7 +20,7 @@
     </header>
     <main class="container">
       <article>
-        <h2>Exhange some crypto</h2>
+        <h2>Exchange some crypto</h2>
         <img src="https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy80ZDIwYzc5YzIxNzZjZTk2YzA2N2E4MjZlYzQ0ZmQ2Yi53ZWJw.webp" alt="">
         <br>
         <br>
@@ -28,10 +28,10 @@
         <p>BTC BUY: &nbsp;10 USD</p>
         <br>
         <h4>My Wallet:</h4>
-        <a href="https://www.blockchain.com/" target="_blank"><p>XXXXXQmavnUfCW11DAApiJxp7ARn2XXXXX</p></a>
+        <a href="https://www.blockchain.com/" target="_blank"><p class="exchange">XXXXXQmavnUfCW11DAApiJxp7ARn2XXXXX</p></a>
         <br>
         <h4>Contact me</h4>
-        <a href="https://yriry2.holbertonschool.com/u/dgonzalez1/" target="_blank"><p>Holberton School Forum</p></a>
+        <a href="https://yriry2.holbertonschool.com/u/dgonzalez1/" target="_blank"><p class="exchange">Holberton School Forum</p></a>
       </article>
       <aside>
         <p>Lorem ipsum dolor sit amet, consectetur adipi sit amet, consectetur adipi sit amet, consectetur adipi</p>
