--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
-
-<!DOCTYPE html>
+<
+!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bitcoin news</title>
     <link href="https://www.holbertonschool.com/level2/holberton.css" rel="stylesheet">
+    <link rel="shortcut icon" href="icon.png">
     <link href="styles.css" rel="stylesheet">
   </head>
   <body class="works_on_smartphone">
     <header class="container header">
       <h1>Bitcoin news</h1>
         <ul class="navbar">
-          <li><h2><a href="index.html" class="menu">Home</a></h2></li>
-          <li><h2><a href="exchange.html" class="menu">Exchange</a></h2></li>
-          <li><h2><a href="tweets.html" class="menu">Tweets</a></h2></li>
-          <li><h2><a href="about.html" class="menu">About</a></h2></li>
+          <li><h2><a href="index.html" >Home</a></h2></li>
+          <li><h2><a href="exchange.html" >Exchange</a></h2></li>
+          <li><h2><a href="tweets.html" >Tweets</a></h2></li>
+          <li><h2><a href="about.html" >About</a></h2></li>
         </ul>
     </header>
     <main class="container">
@@ -35,10 +36,10 @@
       <br>
       <p>With the recent trend that encompasses everything about crypto markets and bitcoin, software developers are increasingly creating virtual wallets, each with particular features. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, doloremque, tempora vero molestiae temporibus beatae, voluptatem facilis, fugit similique consequuntur ex. Ducimus tempore provident distinctio ea aut omnis sapiente voluptatum...</p><a href="blog3.html" class="more">See more</a>
       <br>
-      <h3>Buy and sell evrything you want, anonymously</h3>
+      <h3>Buy and sell everything you want, anonymously</h3>
       <a href="blog4.html"><img src="https://images.cointelegraph.com/images/740_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS9zdG9yYWdlL3VwbG9hZHMvdmlldy85OGI4NTA3ZWRlMWU0YTU5ZDc2ZTdiN2NkOTYzMWVlMy5qcGc=.jpg" alt=""></a>
       <br>
-      <p>The blockchain network on which bitcoin works is so democratic that the level of anonymity of each transaction is very high. This allows from the comfort of the cell phone. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, doloremque, tempora vero molestiae temporibus beatae, voluptatem facilis, fugit similique consequuntur ex. Ducimus tempore provident distinctio ea aut omnis sapiente voluptatum...</p><a href="blog1.html" class="more">See more</a>
+      <p>The blockchain network on which bitcoin works is so democratic that the level of anonymity of each transaction is very high. This allows from the comfort of the cell phone. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, doloremque, tempora vero molestiae temporibus beatae, voluptatem facilis, fugit similique consequuntur ex. Ducimus tempore provident distinctio ea aut omnis sapiente voluptatum...</p><a href="blog4.html" class="more">See more</a>
     </article>
     <aside>
       <p>Lorem ipsum dolor sit amet, consectetur adipi sit amet, consectetur adipi sit amet, consectetur adipi</p>
