--- a/tweets.html
+++ b/tweets.html
@@ -9,33 +9,57 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body class="works_on_smartphone" >
-    <header class="container header">
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v5.0"></script>
+    <header class="container">
+      <div class="right">
+        <div class="fb-share-button" data-href="http://3.85.112.173/" data-layout="button" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2F3.85.112.173%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Compartir</a></div>
+        <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button"
+        data-show-count="false">Tweet</a>
+        <script async src="https://platform.twitter.com/widgets.js"></script>    
+      </div>
       <h1>Bitcoin news</h1>
       <ul class="navbar">
-        <li><h2><a href="index.html">Home</a></h2></li>
-        <li><h2><a href="exchange.html">Exchange</a></h2></li>
-        <li><h2><a href="tweets.html">Tweets</a></h2></li>
-        <li><h2><a href="about.html">About</a></h2></li>
+        <li><h2><a href="index.html" >Home</a></h2></li>
+        <li><h2><a href="exchange.html" >Exchange</a></h2></li>
+        <li><h2><a href="tweets.html" >Tweets</a></h2></li>
+        <li><h2><a href="about.html" >About</a></h2></li>
       </ul>
     </header>
     <main class="container">
       <article>
         <h3>Bitcoin News on Twitter</h3>
         <br>
-        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Welcome <a href="https://twitter.com/hashtag/Cohort10?src=hash&amp;ref_src=twsrc%5Etfw">#Cohort10</a>! We&#39;re proud to be part of your journey to <a href="https://twitter.com/hashtag/DefineYourFuture?src=hash&amp;ref_src=twsrc%5Etfw">#DefineYourFuture</a> 😁❤️ <a href="https://t.co/HP9WB6PkrO">pic.twitter.com/HP9WB6PkrO</a></p>&mdash; Holberton School 🌎 (@holbertonschool) <a href="https://twitter.com/holbertonschool/status/1172638577189998592?ref_src=twsrc%5Etfw">September 13, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Welcome <a href="https://twitter.com/hashtag/Cohort10?src=hash&amp;ref_src=twsrc%5Etfw">#Cohort10</a>! We&#39;re proud to be part of your journey to <a href="https://twitter.com/hashtag/DefineYourFuture?src=hash&amp;ref_src=twsrc%5Etfw">#DefineYourFuture</a> 😁❤️ <a href="https://t.co/HP9WB6PkrO">pic.twitter.com/HP9WB6PkrO</a></p>&mdash; Holberton School 🌎 (@holbertonschool) <a href="https://twitter.com/holbertonschool/status/1172638577189998592?ref_src=twsrc%5Etfw">September 13, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js"></script>
         <br>
-        <blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/Cohort8?src=hash&amp;ref_src=twsrc%5Etfw">#Cohort8</a> | We wish you the best! ❤️❤️❤️ <a href="https://t.co/n7I5cCi8Dc">pic.twitter.com/n7I5cCi8Dc</a></p>&mdash; Holberton School Colombia (@HolbertonCOL) <a href="https://twitter.com/HolbertonCOL/status/1192858097045426177?ref_src=twsrc%5Etfw">November 8, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/Cohort8?src=hash&amp;ref_src=twsrc%5Etfw">#Cohort8</a> | We wish you the best! ❤️❤️❤️ <a href="https://t.co/n7I5cCi8Dc">pic.twitter.com/n7I5cCi8Dc</a></p>&mdash; Holberton School Colombia (@HolbertonCOL) <a href="https://twitter.com/HolbertonCOL/status/1192858097045426177?ref_src=twsrc%5Etfw">November 8, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js"></script>
         <br>
-        <blockquote class="twitter-tweet"><p lang="es" dir="ltr">No importa que estes haciendo, no te rindas.</p>&mdash; Leonidas Esteban (@LeonidasEsteban) <a href="https://twitter.com/LeonidasEsteban/status/1192553159283159041?ref_src=twsrc%5Etfw">November 7, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <blockquote class="twitter-tweet"><p lang="es" dir="ltr">No importa que estes haciendo, no te rindas.</p>&mdash; Leonidas Esteban (@LeonidasEsteban) <a href="https://twitter.com/LeonidasEsteban/status/1192553159283159041?ref_src=twsrc%5Etfw">November 7, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js"></script>
         <br>
-        <blockquote class="twitter-tweet"><p lang="es" dir="ltr">“Si todos los días aprendes algo, si nunca paras de aprender, realmente estás haciendo lo mejor con tu vida” - <a href="https://twitter.com/anncode?ref_src=twsrc%5Etfw">@anncode</a> (Curso de estrategias para aprender en línea efectivamente)<br><br>Mejor que un lugar donde puedas aprender, es uno donde aprendas a aprender. <a href="https://twitter.com/platzi?ref_src=twsrc%5Etfw">@platzi</a></p>&mdash; David Gonzalez (@davidgonzalezFx) <a href="https://twitter.com/davidgonzalezFx/status/1191496967404376064?ref_src=twsrc%5Etfw">November 4, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <blockquote class="twitter-tweet"><p lang="es" dir="ltr">“Si todos los días aprendes algo, si nunca paras de aprender, realmente estás haciendo lo mejor con tu vida” - <a href="https://twitter.com/anncode?ref_src=twsrc%5Etfw">@anncode</a> (Curso de estrategias para aprender en línea efectivamente)<br><br>Mejor que un lugar donde puedas aprender, es uno donde aprendas a aprender. <a href="https://twitter.com/platzi?ref_src=twsrc%5Etfw">@platzi</a></p>&mdash; David Gonzalez (@davidgonzalezFx) <a href="https://twitter.com/davidgonzalezFx/status/1191496967404376064?ref_src=twsrc%5Etfw">November 4, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js"></script>
         <br>
-        <blockquote class="twitter-tweet"><p lang="es" dir="ltr">“Los colombianos están muy comprometidos con cambiar la marca de su país, eso los hace grandes emprendedores” <a href="https://twitter.com/cvander?ref_src=twsrc%5Etfw">@cvander</a> en <a href="https://twitter.com/hashtag/PlatziConf?src=hash&amp;ref_src=twsrc%5Etfw">#PlatziConf</a> <a href="https://t.co/CHec9u2QkW">pic.twitter.com/CHec9u2QkW</a></p>&mdash; Platzi (@platzi) <a href="https://twitter.com/platzi/status/1190741133250482176?ref_src=twsrc%5Etfw">November 2, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <blockquote class="twitter-tweet"><p lang="es" dir="ltr">“Los colombianos están muy comprometidos con cambiar la marca de su país, eso los hace grandes emprendedores” <a href="https://twitter.com/cvander?ref_src=twsrc%5Etfw">@cvander</a> en <a href="https://twitter.com/hashtag/PlatziConf?src=hash&amp;ref_src=twsrc%5Etfw">#PlatziConf</a> <a href="https://t.co/CHec9u2QkW">pic.twitter.com/CHec9u2QkW</a></p>&mdash; Platzi (@platzi) <a href="https://twitter.com/platzi/status/1190741133250482176?ref_src=twsrc%5Etfw">November 2, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js"></script>
         <br>
-        <blockquote class="twitter-tweet"><p lang="es" dir="ltr">⚠️Coraje es lo que hay que tener para empezar un proyecto sin garantía de éxito</p>&mdash; David Gonzalez (@davidgonzalezFx) <a href="https://twitter.com/davidgonzalezFx/status/1134956117753286658?ref_src=twsrc%5Etfw">June 1, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <blockquote class="twitter-tweet"><p lang="es" dir="ltr">⚠️Coraje es lo que hay que tener para empezar un proyecto sin garantía de éxito</p>&mdash; David Gonzalez (@davidgonzalezFx) <a href="https://twitter.com/davidgonzalezFx/status/1134956117753286658?ref_src=twsrc%5Etfw">June 1, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js"></script>
       </article>
       <aside>
-        <p>Lorem ipsum dolor sit amet, consectetur adipi sit amet, consectetur adipi sit amet, consectetur adipi</p>
+        <div id="disqus_thread"></div>
+        <script>
+              
+        var disqus_config = function () {
+        this.page.url = "http://3.85.112.173/index.html";
+        this.page.identifier = "home";
+        };
+        
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://bitcoin-news-3.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
       </aside>
     </main>
     <footer>
